k8s/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-web
  labels:
    name: frontend
    environment: production
